[tool.poetry]
name = "bycoders-challenge"
version = "0.1.0"
description = ""
authors = ["Jefte Keller <jeftekeller.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.9.1"
coverage = "^5.5"
environs = {extras = ["django"], version = "^9.3.2"}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
