[tool.poetry]
name = "desafio-dev"
version = "0.1.0"
description = ""
authors = ["th3maid <you@example.com>"]
readme = "README.md"
packages = [{include = "desafio_dev"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
